--- a/frontend/src/components/template/Header.scss
+++ b/frontend/src/components/template/Header.scss
@@ -4,8 +4,14 @@ header.header {
     overflow: hidden;
     white-space: nowrap;
     box-shadow: var(--shadow);
-}
 
-header.header h1 {
-    font-size: 1.8em;
+    h1 {
+        font-size: 1.8em;
+        svg {
+            float: left;
+        }
+        p {
+            line-height: 1.5;
+        }
+    }
 }
