--- a/frontend/src/components/template/Logo.scss
+++ b/frontend/src/components/template/Logo.scss
@@ -3,13 +3,12 @@ aside.logo {
     display: flex;
     justify-content: center;
     align-items: center;
-}
 
-aside.logo img {
-    padding: 0px 15px;
-    width: 100%;
+    img {
+        padding: 0px 15px;
+        width: 100%;
+    }
 }
-
 
 @media(max-width: 576px) {
     aside.logo img {
