--- a/frontend/src/components/template/Nav.scss
+++ b/frontend/src/components/template/Nav.scss
@@ -1,8 +1,7 @@
 aside.menu-area {
     background-color: var(--bg-dark);
-    box-shadow: 
-        2px 0 10px 0 rgba(0, 0, 0, 0.12)
-        2px 0 15px 0 rgba(0, 0, 0, 0.9)
+    box-shadow:
+        2px 0 10px 0 rgba(0, 0, 0, 0.12) 2px 0 15px 0 rgba(0, 0, 0, 0.9)
 }
 
 .menu a {
@@ -11,10 +10,10 @@ aside.menu-area {
     color: #FFF;
     font-weight: 300;
     padding: 15px;
-}
 
-.menu a:hover {
-    background: linear-gradient(135deg, #07a7e3 0%, #32dac3 100%)
+    &:hover {
+        background: linear-gradient(135deg, #07a7e3 0%, #32dac3 100%)
+    }
 }
 
 @media(max-width: 768px) {
@@ -22,16 +21,13 @@ aside.menu-area {
         display: flex;
         justify-content: flex-start;
         align-items: center;
-    }
-
-    .menu a {
-        display: inline;
-        padding: 10px;
-        margin: 0px;
-    }
-
-    .menu {
         height: 100%;
         justify-content: space-around;
+
+        a {
+            display: inline;
+            padding: 10px;
+            margin: 0px;
+        }
     }
 }
